Update dockerfile to java 20